# project-planning-cloud-api

./: .env.example  .gitignore  AGENTS.md  API_DOCUMENTATION.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  convert_doc_to_pdf.py  docker-compose.yml  pyproject.toml  seed_data.py  selnolig.sty  test_etapa_completion.py
.serena/: project.yml
.serena/memories/: state_machine_overview.md
alembic/: env.py
alembic/versions/: 0ec59ed902de_update_enum_values_to_lowercase.py  22d7d5e154ae_add_users_table.py  26e1c5debbec_add_indexes_for_proyecto_filtering_and_.py  27f3ae1641bf_add_bonita_tracking_fields_to_.py  480654690751_create_users_and_projects.py  5f3895cf05d2_add_observaciones_table.py  7a84d4a6d23b_add_observaciones_table.py  839f5ca1b315_add_comprometido_state_to_estadopedido_.py  9e0ce1dc0ff0_update_project_and_etapa_states.py  a1b2c3d4e5f6_add_timestamps_to_pedidos_table.py  b2c3d4e5f6a7_add_timestamps_to_etapas_table.py  c222f92ef84b_simplify_proyecto_estados_and_add_.py  c3d4e5f6a7b8_add_execution_timestamps_to_proyectos_table.py  c4cd300b3a8d_add_ofertas_table_and_user_id_to_.py  ce40702b58f1_add_esperando_ejecucion_state_to_etapas.py  d5e8f9a1b2c3_add_estado_to_pedidos.py  e3a4711db50c_add_bonita_tracking_fields_to_etapas.py  e5c7f0c58bc9_fix_enum_case_consistency.py  e88571dbba0e_fix_comprometido_enum_value_to_uppercase.py  f39824fbbcd0_initial_schema_with_proyectos_etapas_.py  f9a1b2c3d4e5_add_fecha_resolucion_to_ofertas.py  (+1 more)
app/: __init__.py  config.py  main.py
tests/: __init__.py  test_offers_and_filters.py  test_security.py  test_seed_endpoint.py
(+40 files in other folders)
